2017-06-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Draw_Header): Simplify.

2017-06-10  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c (FTDemo_Draw_Header): Fix compiler warning.

2017-06-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftview.c (event_encoding_change, main): Minor updates.

2017-06-10  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c (FTDemo_Draw_Header): Show gamma in second line.

	Otherwise it clashes with long file names.

2017-06-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Merge gray and color sbits controls.

	* src/ftcommon.h (FTDemo_Handle): Merge `color' into `use_sbits'.
	* src/ftcommon.c (FTDemo_New, FTDemo_Update_Current_Flags): Updated.
	* src/ftview.c (Process_Event, event_help, write_header): Updated.

2017-06-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Teach encodings.

	* src/ftgrid.c (grid_status_draw_outline): Use encoding.
	(parse_cmdline, usage): New option to specify encoding.
	(Process_Event): Use hexadecimal steps through index.

2017-06-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Minor.

	* src/ftgrid.c (grid_status_draw_outline): Move the stroker
	initialization from here...
	(main): ... to here.

2017-06-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Clean up charmap handling.

	* src/ftcommon.h (FT_ENCODING_ORDER): Introduce this special encoding
	for glyph order because `FT_ENCODING_NONE' has other meanings.
	* src/ftcommon.c (FTDemo_Install_Font): Fall back to
	`FT_ENCODING_ORDER' if encoding is not recognized.
	(FTDemo_Draw_Header): Updated.

	* src/ftview.c (status): Remove redundant `encoding' field and update
	all references.
	(FT_ENCODING_OTHER): Removed in favor of `FT_ENCODING_NONE'.

2017-06-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid, ftstring, ftview] Further top header consolidation.

	* src/ftview.c (event_encoding_change): Update `handle'.